--- a/.gitignore
+++ b/.gitignore
@@ -38,10 +38,15 @@ Thumbs.db
 
 ### Unity ###
 [Ll]ibrary/
+**/[Ll]ibrary/
 [Tt]emp/
+**/[Tt]emp/
 [Oo]bj/
+**/[Oo]bj/
 [Bb]uild/
+**/[Bb]uild/
 [Bb]uilds/
+**/[Bb]uilds/
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
